reworked establishment-vs-density figure

--- a/ms/figures.Rmd
+++ b/ms/figures.Rmd
@@ -287,7 +287,7 @@ g3 <- ggplot(d, aes(x = fit, y = name)) +
         strip.text = element_blank(),
         panel.spacing = unit(1, "lines"))
 
-layoutheights <- filter(plotting, randomseed == 1, hgtclass == 2) %>% 
+layoutheights <- distinct(plotting, species, name) %>% 
   group_by(species) %>% 
   summarize(n = n()) %>% 
   arrange(desc(species)) %>% 
@@ -305,16 +305,93 @@ ggsave(g123, filename= 'ggplot.svg',
 ## vs. density
 
 ```{r}
-  # geom_point(data = filter(d, modeled == TRUE, !is.na(locality)),
-  #            color = 'grey', alpha = 0.5,
-  #            position = position_jitter(width = 0, height = 0.25)) +
-  # geom_linerange(data = filter(d, modeled == TRUE, is.na(locality), is.na(randomseed)),
-  #                mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
-  # geom_point(data = filter(d, modeled == TRUE, is.na(locality), is.na(randomseed)),
-  #            color = col, size = csize) +
-  # geom_point(data = filter(d, modeled == FALSE), 
-  #            color = col, pch = 1, size = csize) +
+plotting <- dat
+
+d <- filter(plotting, species == "P.sitchensis-lutzii", is.na(randomseed)) %>% 
+  arrange(modeled, locality) %>% 
+  mutate(name = fct_reorder(name, fit, last))
+col <- '#984ea3'
+g1 <- ggplot(d, aes(x = fit, y = name)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
+  geom_point(data = filter(d, modeled, !is.na(locality)),
+             color = 'grey', alpha = 0.5,
+             position = position_jitter(width = 0, height = 0.25)) +
+  geom_point(data = filter(d, modeled == FALSE), 
+             color = col, pch = 1, size = csize+1) +
+  geom_linerange(data = filter(d, modeled, is.na(locality)),
+                 mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
+  geom_point(data = filter(d, modeled, is.na(locality)), color = col, size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  coord_cartesian(xlim = c(1e-4, 1e2)) +
+  theme_light() + 
+  theme(axis.text.y = element_markdown(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank(),
+        strip.background =element_rect(fill="white"),
+        strip.text = element_text(colour = "black"),
+        panel.spacing = unit(1, "lines"))
+
+d <- filter(plotting, species == "P.abies", is.na(randomseed)) %>% 
+  arrange(modeled, locality) %>% 
+  mutate(name = fct_reorder(name, fit, last))
+col <- '#377eb8'
+g2 <- ggplot(d, aes(x = fit, y = name)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
+  geom_point(data = filter(d, modeled, !is.na(locality)),
+             color = 'grey', alpha = 0.5,
+             position = position_jitter(width = 0, height = 0.25)) +
+  geom_point(data = filter(d, modeled == FALSE), 
+             color = col, pch = 1, size = csize+1) +
+  geom_linerange(data = filter(d, modeled, is.na(locality)),
+                 mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
+  geom_point(data = filter(d, modeled, is.na(locality)), color = col, size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  coord_cartesian(xlim = c(1e-5, 1e1)) +
+  theme_light() +
+  theme(axis.text.y = element_markdown(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank(),
+        strip.background =element_blank(),
+        strip.text = element_blank(),
+        panel.spacing = unit(1, "lines"))
+
+d <- filter(plotting, species == "Larix", is.na(randomseed)) %>% 
+  arrange(modeled, locality) %>% 
+  mutate(name = fct_reorder(name, fit, last))
+col <- '#4daf4a'
+g3 <- ggplot(d, aes(x = fit, y = name)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
+  geom_point(data = filter(d, modeled, !is.na(locality)),
+             color = 'grey', alpha = 0.5,
+             position = position_jitter(width = 0, height = 0.25)) +
+  geom_point(data = filter(d, modeled == FALSE), 
+             color = col, pch = 1, size = csize+1) +
+  geom_linerange(data = filter(d, modeled, is.na(locality)),
+                 mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
+  geom_point(data = filter(d, modeled, is.na(locality)), color = col, size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  coord_cartesian(xlim = c(1e-3, 1e3)) +
+  labs(x = 'relative establishment likelihood') +
+  theme_light() +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_markdown(),
+        axis.ticks = element_blank(),
+        strip.background =element_blank(),
+        strip.text = element_blank(),
+        panel.spacing = unit(1, "lines"))
+
+layoutheights <- distinct(plotting, species, name) %>% 
+  group_by(species) %>% 
+  summarize(n = n()) %>% 
+  arrange(desc(species)) %>% 
+  pull(n)
+g123 <- g1 + g2 + g3 + 
+  plot_layout(nrow = 3, heights = layoutheights)
 ```
+
 
 ## sensitivity to offsetting seed rain
 
